--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>05/03/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, ±24)</b><br>Region of origin: <b>Maghreb</b><br>Cause of death: <b>found floating in Tajo-Segura water transfer in Torre-Pacheco (ES)</b><br>Source: MUGAK/Raz<br>
+Found dead: <b>29/06/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Vera Filantova (woman, 47)</b><br>Region of origin: <b>Kyrgyzstan (Stateless)</b><br>Cause of death: <b>suicide, in the Netherlands, heavily depressed after 7 months in detention, was given 72 hours to leave the country</b><br>Source: SVZV<br>
 
 <br>
 
