--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>02/06/10</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Slawik C. (man, 58)</b><br>Region of origin: <b>Armenia</b><br>Cause of death: <b>suicide, hanged himself with kettle cord in Langenhagen Prison (DE) while facing deportation</b><br>Source: 762/IRR<br>
+Found dead: <b>Jul 02</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Kurdistan</b><br>Cause of death: <b>stowaway, crushed to death by cargo in a truck travelling from Greece to Italy</b><br>Source: HRFT<br>
 
 <br>
 
