--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>25/10/01</b><br>Number of person: <b>25</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Comoros</b><br>Cause of death: <b>reportedly drowned when boat sank on way to Mayotte (FR)</b><br>Source: Mayotte sans frontières<br>
+Found dead: <b>Aug 03</b><br>Number of person: <b>13</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned off Canary Islands (ES) after skippers used knives to force them to jump into the sea</b><br>Source: SOS<br>
 
 <br>
 
