--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>08/11/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>New Zealand</b><br>Cause of death: <b>fell from ferry in Harwich, Essex (GB) after immigration request was rejected</b><br>Source: The Standard/IRR<br>
+Found dead: <b>14/01/17</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>found floating in the sea near Algeciras (ES), tried to swim to the Spanish enclave of Ceuta (ES) from Morocco</b><br>Source: Independent<br>
 
 <br>
 
