--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>27/06/02</b><br>Number of person: <b>6</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Somalia</b><br>Cause of death: <b>reportedly drowned after boat travelling from Turkey to Kos (GR) sank near Datca (TR)</b><br>Source: VK/MNS/HRFT/IRR<br>
+Found dead: <b>29/06/14</b><br>Number of person: <b>45</b><br>Name, gender, age: <b>N.N. (45 men)</b><br>Region of origin: <b>Syria, Senegal, Mali, Gambia</b><br>Cause of death: <b>suffocated in the hold of smugglers boat overcrowded with 600 African migrants</b><br>Source: OOB/ANSA/GuardianUn./Telegraaf/Aljazeera<br>
 
 <br>
 
