--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>May 10</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 34)</b><br>Region of origin: <b>Maghreb</b><br>Cause of death: <b>died after deportation from the Netherlands, was trying to re-enter Europe on boat to Samos (GR)</b><br>Source: VK<br>
+Found dead: <b>07/11/12</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>missing, reportedly drowned, after boat sank in the Strait of Gibraltar near Tarifa (ES)</b><br>Source: MUGAK<br>
 
 <br>
 
