--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>14/03/14</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Senay Berha (man, 25)</b><br>Region of origin: <b>Eritrea</b><br>Cause of death: <b>found dead in river near Eritrean refugee camp in Calais (FR); had been missing for several days</b><br>Source: CMS<br>
+Found dead: <b>30/06/94</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Halim Dener (boy, 17)</b><br>Region of origin: <b>Kurdistan</b><br>Cause of death: <b>shot by off-duty policeman while hanging ERNK posters in Hannover (DE)</b><br>Source: ZAG<br>
 
 <br>
 
