--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>30/06/94</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Halim Dener (boy, 17)</b><br>Region of origin: <b>Kurdistan</b><br>Cause of death: <b>shot by off-duty policeman while hanging ERNK posters in Hannover (DE)</b><br>Source: ZAG<br>
+Found dead: <b>04/08/13</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (3 women)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>died in rubber dinghy in the Mediterranean Sea; bodies thrown overboard</b><br>Source: GlobalPost<br>
 
 <br>
 
