--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>23/04/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Yussuf Diao (man)</b><br>Region of origin: <b>Senegal</b><br>Cause of death: <b>drowned after boat carrying passengers from Kolda region (SN) was shipwrecked off coast of Morocco</b><br>Source: Book:LosInvisiblesDeKolda/MUGAK/ELM/FE<br>
+Found dead: <b>01/10/05</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (1 boy, 8; 1 woman, 35)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>asked friend to push them out of 5-storey building in the Netherlands out of fear of repatriation</b><br>Source: VK<br>
 
 <br>
 
