--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/10/05</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (1 boy, 8; 1 woman, 35)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>asked friend to push them out of 5-storey building in the Netherlands out of fear of repatriation</b><br>Source: VK<br>
+Found dead: <b>12/08/06</b><br>Number of person: <b>28</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>died of starvation in boat that had been rerouted by Spanish coast guards</b><br>Source: ST/ELM/FE<br>
 
 <br>
 
