--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/08/06</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Van N. (man, 29)</b><br>Region of origin: <b>Vietnam</b><br>Cause of death: <b>died in car accident in Dannenreich (DE) while fleeing police</b><br>Source: BF/VK/IN<br>
+Found dead: <b>04/03/11</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Tunisia</b><br>Cause of death: <b>drowned after boat capsized during storm near Lampedusa (IT); 28 rescued</b><br>Source: AFP/Le Monde/Migreurop/Romandie/LR<br>
 
 <br>
 
