--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>13/08/07</b><br>Number of person: <b>19</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Comoros</b><br>Cause of death: <b>disappeared after boat sank in Indian Ocean near Mayotte Island (FR) after leaving Comoros Islands (KM)</b><br>Source: Le Monde<br>
+Found dead: <b>Mar 00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Zdzislav Dudca (man, 40)</b><br>Region of origin: <b>Poland</b><br>Cause of death: <b>homeless migrant, died after empty carriage he slept in at Naples (IT) train station caught fire</b><br>Source: IRR<br>
 
 <br>
 
