--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Aug 08</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 children)</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>died of starvation, thrown in the Mediterranean Sea by their father</b><br>Source: Ua<br>
+Found dead: <b>Mar 08</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 23)</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>drowned while trying to reach Spain from Algeria, was from Tiaret (DZ)</b><br>Source: FE/QUOTI<br>
 
 <br>
 
