--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Mar 08</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 23)</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>drowned while trying to reach Spain from Algeria, was from Tiaret (DZ)</b><br>Source: FE/QUOTI<br>
+Found dead: <b>03/03/99</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Khaled Abuzarifeh (man, 27)</b><br>Region of origin: <b>Palestine</b><br>Cause of death: <b>suffocated after being gagged by police during deportation from Zürich Airport (CH)</b><br>Source: ST/Morgengr./Pressesp. Rassis./IRR/MNS/AI/AFP<br>
 
 <br>
 
