--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>13/04/10</b><br>Number of person: <b>11</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>reportedly drowned after boat from Algeria sank off coast of Almería (ES); 3 survivors</b><br>Source: PUB/SUR/Provincias/Can7/Nerja/MUGAK/EP/ABC<br>
+Found dead: <b>24/12/02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Sirous Khajehb (man, 29)</b><br>Region of origin: <b>Iran</b><br>Cause of death: <b>suicide, hanged himself in Huddersfield (GB) after being wrongly informed his asylum claim was rejected</b><br>Source: IRR/YT/NCADC<br>
 
 <br>
 
