--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Oct 02</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N. (5 women)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned after boat carrying 42 migrants sank off coast of Barbate (ES)</b><br>Source: IRR<br>
+Found dead: <b>31/07/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (baby, 6 months)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>drowned near Punta Paloma in Tarifa (ES) after boat capsized</b><br>Source: ADN<br>
 
 <br>
 
