--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>31/07/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (baby, 6 months)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>drowned near Punta Paloma in Tarifa (ES) after boat capsized</b><br>Source: ADN<br>
+Found dead: <b>03/11/17</b><br>Number of person: <b>10</b><br>Name, gender, age: <b>N.N. (1 woman)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>4 drowned in shipwreck near Kalolimnos (GR) close to Turkey; 6 missing, 15 people rescued</b><br>Source: Watch TheMed/IOM Turkey/Reu.<br>
 
 <br>
 
