--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>20/04/15</b><br>Number of person: <b>20</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned when boat carrying 300 migrants to Italy sank off Libyan coast</b><br>Source: ClandestinE<br>
+Found dead: <b>Nov 15</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N. (1 girl; 3 boys)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned when dinghy to Lesbos (GR) sank near Ayvacik (TR) during storm; 51 rescued</b><br>Source: Imkander<br>
 
 <br>
 
