--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>10/02/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (±40)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died of hypothermia while trying to cross the Evros River into Greece, body found near Tychero (GR)</b><br>Source: PICUM/Rizo<br>
+Found dead: <b>15/11/16</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>crushed, found on boat that sank off coast of Libya; 114 rescued</b><br>Source: Independent/Reu./UNHCR/SOSMed/AFP/MOAS<br>
 
 <br>
 
