--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>30/11/15</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 men, 23, 24)</b><br>Region of origin: <b>Cameroon</b><br>Cause of death: <b>asphyxiated when police burned down migrant encampent in Fnideq (MA) near the Spanish enclave of Ceuta (ES)</b><br>Source: Obs.france24/EFE/YABI<br>
+Found dead: <b>21/01/09</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>body found in boat on Cala Pisana beach, Lampedusa (IT); 53 survivors</b><br>Source: LR/MP/AdnK/ANSA/NOB<br>
 
 <br>
 
