--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>21/01/09</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>body found in boat on Cala Pisana beach, Lampedusa (IT); 53 survivors</b><br>Source: LR/MP/AdnK/ANSA/NOB<br>
+Found dead: <b>04/02/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman)</b><br>Region of origin: <b>Ethiopia</b><br>Cause of death: <b>drowned, found in the sea off coast of Greece</b><br>Source: Rel<br>
 
 <br>
 
