--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Mar 05</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (3 girls)</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>died of dehydration near Tumu (LY) while travelling through the desert to get from Niger to Libya</b><br>Source: LESP/Gatti/Migreurop<br>
+Found dead: <b>25/02/03</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Mali or Gabon</b><br>Cause of death: <b>stowaway, fell from wheel bay of airplane while travelling to airport in Paris (FR)</b><br>Source: MNS<br>
 
 <br>
 
