--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>29/12/99</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Jamel (man)</b><br>Region of origin: <b>Tunisia</b><br>Cause of death: <b>died in a fire caused by rebellion in detention centre in Seraino Vulpitta di Trapani (IT)</b><br>Source: CDS/taz/MUGAK/MP/ARCI/L.B.CPT/GdV/quibla<br>
+Found dead: <b>18/10/00</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N. (5 men)</b><br>Region of origin: <b>Kurdistan-Iraq</b><br>Cause of death: <b>found dead by highway in Foggia (IT) after reportedly suffocating in van</b><br>Source: MNS/IRR<br>
 
 <br>
 
