--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>16/03/97</b><br>Number of person: <b>18</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Iran, Iraq</b><br>Cause of death: <b>drowned after boat capsized between Kas (TR) and Kastellorizo (GR)</b><br>Source: MNS/FR/Libération<br>
+Found dead: <b>Dec 06</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 men)</b><br>Region of origin: <b>Bosnia</b><br>Cause of death: <b>stowaway, suffocated by toxic fumes in truck found in Ancona (IT)</b><br>Source: FE/LR<br>
 
 <br>
 
