--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Dec 06</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 men)</b><br>Region of origin: <b>Bosnia</b><br>Cause of death: <b>stowaway, suffocated by toxic fumes in truck found in Ancona (IT)</b><br>Source: FE/LR<br>
+Found dead: <b>23/03/17</b><br>Number of person: <b>6</b><br>Name, gender, age: <b>N.N. (5 boys-men, 16-25)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned when 2 boats capsized near coast of Libya</b><br>Source: BBC/CTV/Sun<br>
 
 <br>
 
