--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>05/05/99</b><br>Number of person: <b>13</b><br>Name, gender, age: <b>N.N. (2 women; 5 men)</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>drowned trying to cross the Strait of Gibraltar, body found on Moroccan coast</b><br>Source: MNS/Informe Raxen<br>
+Found dead: <b>06/12/06</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died of dehydration and hypothermia in hospital after boat landed in Arguineguín (ES)</b><br>Source: FE/ELM/MNS/APDHA/NOB/TySp/Gaymengc/TS<br>
 
 <br>
 
