--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>18/04/13</b><br>Number of person: <b>23</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>10 drowned after boat sank off the Alhucemas Islands (MA/ES); 13 missing, 24 rescued</b><br>Source: MNS<br>
+Found dead: <b>10/10/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Shaukat Ali (man, 61)</b><br>Region of origin: <b>Pakistan</b><br>Cause of death: <b>suicide, hanged himself at his home in Birkby (GB) after asylum claim was rejected</b><br>Source: HEXAM/IRR<br>
 
 <br>
 
